--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,4 @@
-# EditorConfig is awesome: http://EditorConfig.org
+# EditorConfig is awesome: https://EditorConfig.org
 
 # top-most EditorConfig file
 root = true
@@ -14,3 +14,7 @@ insert_final_newline = true
 [*.d]
 charset = utf-8
 max_line_length = 100
+
+[dub.selections.json]
+charset = utf-8
+indent_style = tab
